# vocabulary_app

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEPLOY_QUICKSTART.md  README.md  extract_subtitles.sh  find_missing_words.py  issue.md  nginx-vocabulary-app.conf  requirements.txt  setup.sh  shuffle_words.py  start-production.sh  start.sh  test_load_balancing.py  test_review_load_balancing.py  vercel.json
api/: index.py
backend/: .env.example  CLAUDE.md  __init__.py  app.py  config.py  const.py  exceptions.py  extensions.py  user_config.json
doc/: DEPLOYMENT.md  DEPLOY_QUICKSTART.md
docs/: FRONTEND_DESIGN_OPTIMIZATION.md  batch_definition_architecture.md  code-review-2026-03-07.md  code-simplification-plan.md  course-legal-english.md  course-ukrainian.md  database-schema.md  external-api.md  lapse-system-analysis.md  multi-user-implementation.md  nginx-courses.conf  performance-optimization.md  refactoring-plan.md  refactoring_completion_summary.md  refactoring_final_report.md  relation-sharing-proposal.md  relation_generator_refactor_guide.md  relation_graph_filter_optimization.md  review-system-analysis.md  speaking-module.md  uka-adaptation.md
frontend/: .env.development  .env.example  CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: apply_legal_bilingual.py  balance_review_schedule.py  duo_words.json  introspect_database.py  migrate_course_schema.py  migrate_to_supabase.py  migration_multi_user.sql  normalize_legal_caps.py  ocr_duo.py  (+7 more)
whisper.cpp/examples/stream/: CMakeLists.txt  stream_stdin.cpp
(+751 files in other folders)
